# word2vec

./: README.md
source/: CMakeLists.txt  debug.hpp  distance.cpp  text.hpp  util.hpp  wikifil.pl  word2vec.cpp  word2vec.py  word2vec2.cpp
